--- a/test/dummy/app/views/layouts/component_preview.html.erb
+++ b/test/dummy/app/views/layouts/component_preview.html.erb
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>App Layout</title>
+  <title>Custom Layout</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-
   <%= stylesheet_link_tag 'application', media: 'all' %>
 </head>
 <body>
   <%= yield %>
-
-  <% params.dig(:lookbook, :display).each do |key, value| %>
-    <%= key %>=<%= value %>
-  <% end %>
 </body>
 </html>
