--- a/app/views/lookbook/workbench/inspector/_params.html.erb
+++ b/app/views/lookbook/workbench/inspector/_params.html.erb
@@ -1,6 +1,3 @@
-<%
-text_types = ["text", "email", "url"] # TODO: full list of text-style input types
-%>
 <div class="py-3">
   <% items.each do |param| %>
     <div class="px-4 py-3" x-data="param" @document:patched="setFocus">
@@ -9,8 +6,11 @@ text_types = ["text", "email", "url"] # TODO: full list of text-style input type
           <label for="param-<%= param[:name] %>" class="font-bold"><%= param[:name].titleize %></label>
         </div>
         <div class="flex-grow" @focus="focussed = true" @blur="focussed = false">
-          <% field = text_types.include?(param[:input_type]) ? "text" : param[:input_type] %>      
-          <%= render "workbench/inspector/params/#{field}", param: param %>
+          <%= render "workbench/inspector/params/#{param[:input]}",
+            **param,
+            value: params.key?(param[:name]) ? params[param[:name]] : param[:default],
+            id: "#{@example.id}-param-#{param[:name]}"
+          %>
         </div>
       </div>
     </div>
