--- a/app/views/lookbook/workbench/inspector/params/_textarea.html.erb
+++ b/app/views/lookbook/workbench/inspector/params/_textarea.html.erb
@@ -1,8 +1,8 @@
 <textarea
-  id="param-<%= param[:name] %>"
+  id="<%= id %>"
   class="form-input"
-  name="<%= param[:name] %>"
+  name="<%= name %>"
   rows="4"
-  @keyup.stop.debounce.200="update($el.name, $el.value)"
+  @keyup.stop.debounce.300="update($el.name, $el.value)"
   data-param-input
 ></textarea>
