--- a/app/views/lookbook/workbench/inspector/params/_text.html.erb
+++ b/app/views/lookbook/workbench/inspector/params/_text.html.erb
@@ -4,5 +4,5 @@
   type="<%= input_type %>"
   name="<%= name %>"
   value="<%= value %>"
-  @keyup.stop.debounce.300="update($el.name, $el.value)"
+  @keyup.stop.debounce.400="if (validate()) update($el.name, $el.value)"
   data-param-input>
