Switch Parcel for asset bundling

--- a/app/views/lookbook/layouts/app.html.erb
+++ b/app/views/lookbook/layouts/app.html.erb
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-  <link href="/lookbook-assets/app.css" rel="stylesheet">
+  <link href="/lookbook-assets/css/app.css?v=<%= Lookbook::VERSION %>" rel="stylesheet">
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👀</text></svg>">
 
   <% if config.auto_refresh %>
@@ -13,8 +13,8 @@
       window.SOCKET_PATH = "<%= Lookbook::Engine.websocket_mount_path %>";
     </script>
   <% end %>
-  <script src="/lookbook-assets/app.js" defer></script>
-
+  <script src="/lookbook-assets/js/app.js?v=<%= Lookbook::VERSION %>" defer></script>
+  
   <title><%= [@example&.label, @preview&.label, "Lookbook"].compact.join(" :: ") %></title>
 </head>
 <body class="text-gray-800 font-sans text-sm antialiased h-screen overflow-hidden">
@@ -36,6 +36,6 @@
     <main id="main" x-effect="render" class="h-full overflow-hidden w-full" x-show="!$screen('md') || !sidebarOpenMobile" x-cloak>
       <%= yield %>
     </main>
-  </div>
+  </div>  
 </body>
 </html>
