--- a/app/views/lookbook/layouts/app.html.erb
+++ b/app/views/lookbook/layouts/app.html.erb
@@ -17,25 +17,29 @@
   
   <title><%= [@example&.label, @preview&.label, "Lookbook"].compact.join(" :: ") %></title>
 </head>
-<body class="text-gray-800 font-sans text-sm antialiased h-screen overflow-hidden">
+<body class="text-gray-800 font-sans text-sm antialiased overflow-hidden">
   <div
+    id="page"
     x-data="page"
-    x-effect="updateTitle"
-    @refresh.document="fetchHTML().then(doc => $dispatch('document:updated', {doc}))"
-    @popstate.window="fetchHTML().then(doc => { $dispatch('document:loaded', {doc}); sidebarOpenMobile = false})"
-    @sidebar:toggle.window="sidebarOpenMobile = !sidebarOpenMobile"
-    :style="`grid-template-columns: ${$store.nav.width}px 1px 1fr;`"
-    class="md:grid w-screen h-screen"
-  >
-    <div class="h-full bg-gray-100 overflow-hidden" x-show="$screen('md') || sidebarOpenMobile" x-cloak>
-      <%= render "shared/sidebar" %>
+    :style="`grid-template-columns: ${$store.sidebar.width}px 1px 1fr;`"
+    @popstate.window="update"
+    @resize.window="$store.layout.desktop = window.innerWidth >= $store.layout.desktopWidth"
+    class="md:grid w-screen h-screen">
+    <div class="h-full bg-gray-100 overflow-hidden" x-show="$store.layout.desktop || $store.sidebar.open" x-cloak>
+      <%= render "app/sidebar" %>
     </div>
-    <div x-data="split(splitProps)" class="h-full gutter border-r border-gray-300 relative" x-show="$screen('md')" x-cloak>
+    <div
+      x-data="splitter('vertical', {minSize: $store.sidebar.minWidth})"
+      class="h-full gutter border-r border-gray-300 relative"
+      x-show="$store.layout.desktop"
+      x-effect="$store.sidebar.width = Math.min(splits[0] || $store.sidebar.width, $store.sidebar.maxWidth)"
+      x-cloak
+    >
       <div class="w-[9px] h-full bg-transparent hover:bg-indigo-100 hover:bg-opacity-20 transition absolute top-0 bottom-0 transform -translate-x-1/2 cursor-[col-resize] z-10"></div>
     </div>
-    <main id="main" x-effect="render" class="h-full overflow-hidden w-full" x-show="!$screen('md') || !sidebarOpenMobile" x-cloak>
+    <main id="main" class="h-full overflow-hidden w-full" x-show="$store.layout.desktop || !$store.sidebar.open" x-cloak>
       <%= yield %>
     </main>
-  </div>  
+  </div>
 </body>
 </html>
