--- a/app/views/layouts/lookbook/app.html.erb
+++ b/app/views/layouts/lookbook/app.html.erb
@@ -24,9 +24,18 @@
     :style="`grid-template-columns: ${$store.sidebar.width}px 1px 1fr;`"
     @popstate.window="update"
     @resize.window="$store.layout.desktop = window.innerWidth >= $store.layout.desktopWidth"
-    class="md:grid w-screen h-screen">
-    <div class="h-full bg-gray-100 overflow-hidden" x-show="$store.layout.desktop || $store.sidebar.open" x-cloak>
-      <%= render "app/sidebar" %>
+    class="md:grid w-screen h-screen"
+  >
+    <div class="h-full bg-gray-100 overflow-hidden flex flex-col" x-show="$store.layout.desktop || $store.sidebar.open" x-cloak>
+      <div class="bg-white h-10 border-b border-gray-300 flex flex-none items-center relative">
+        <button class="flex-none ml-4 md:hidden" @click="$store.sidebar.toggle">
+          <%= icon "x", size: 4, class: "hover:text-indigo-500" %>
+        </button>
+        <%= component "filter" %>
+      </div>
+      <div class="flex-grow overflow-y-auto">
+        <%= component "nav", items: @nav.items %>
+      </div>
     </div>
     <div
       x-data="splitter('vertical', {minSize: $store.sidebar.minWidth})"
