--- a/public/lookbook-assets/css/app.css
+++ b/public/lookbook-assets/css/app.css
@@ -911,7 +911,70 @@ video {
 	margin-top: 0;
 }.prose-sm > :last-child {
 	margin-bottom: 0;
-}.pointer-events-none {
+}#nav > ul > li {
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+}.nav-toggle {
+	display: flex;
+	cursor: pointer;
+	align-items: center;
+	padding-right: 0.75rem;
+}.nav-toggle:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+	--tw-bg-opacity: 0.5;
+}.nav-label {
+	width: 100%;
+	user-select: none;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	white-space: nowrap;
+	text-align: left;
+}.code {
+	font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}.code pre {
+	display: block;
+}.code .line {
+	display: flex;
+	align-items: center;
+	line-height: 1.625;
+}.code.numbered {
+	position: relative;
+	padding-top: 0.75rem;
+}.code.numbered:before {
+    content: "";
+    left: calc(2.7em + 8px);
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    border-right-width: 1px;
+    --tw-border-opacity: 1;
+    border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+  }.code .line-number {
+    width: calc(2.7em + 8px);
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-right: 8px;
+    margin-right: 16px;
+    flex: none;
+    text-align: right;
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-size: 0.75rem;
+    line-height: 1rem;
+    --tw-text-opacity: 1;
+    color: rgba(156, 163, 175, var(--tw-text-opacity));
+  }.code .line-content {
+	flex: none;
+	padding-right: 1rem;
+}/* .code .line:before {
+    content: counter(line);
+    width: calc(3em + 8px);
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-right: 8px;
+    @apply font-mono inline-block text-right mr-4 text-gray-400 border-r border-gray-200;
+  } */.pointer-events-none {
 	pointer-events: none;
 }.absolute {
 	position: absolute;
@@ -925,31 +988,23 @@ video {
 }.inset-y-0 {
 	top: 0px;
 	bottom: 0px;
-}.top-0 {
-	top: 0px;
+}.left-0 {
+	left: 0px;
 }.right-0 {
 	right: 0px;
+}.top-0 {
+	top: 0px;
+}.bottom-0 {
+	bottom: 0px;
 }.top-1\/2 {
 	top: 50%;
 }.right-2 {
 	right: 0.5rem;
-}.left-0 {
-	left: 0px;
-}.bottom-0 {
-	bottom: 0px;
-}.left-4 {
-	left: 1rem;
 }.z-10 {
 	z-index: 10;
 }.mx-auto {
 	margin-left: auto;
 	margin-right: auto;
-}.mr-3 {
-	margin-right: 0.75rem;
-}.ml-4 {
-	margin-left: 1rem;
-}.mb-1 {
-	margin-bottom: 0.25rem;
 }.mt-4 {
 	margin-top: 1rem;
 }.mt-3 {
@@ -960,12 +1015,20 @@ video {
 	margin-left: auto;
 }.-mb-px {
 	margin-bottom: -1px;
+}.ml-4 {
+	margin-left: 1rem;
+}.mr-3 {
+	margin-right: 0.75rem;
+}.mb-1 {
+	margin-bottom: 0.25rem;
+}.mr-1 {
+	margin-right: 0.25rem;
 }.mr-1\.5 {
 	margin-right: 0.375rem;
 }.ml-\[3px\] {
 	margin-left: 3px;
-}.mr-1 {
-	margin-right: 0.25rem;
+}.mb-4 {
+	margin-bottom: 1rem;
 }.block {
 	display: block;
 }.inline-block {
@@ -976,44 +1039,44 @@ video {
 	display: inline-flex;
 }.hidden {
 	display: none;
-}.h-4 {
-	height: 1rem;
+}.h-screen {
+	height: 100vh;
+}.h-full {
+	height: 100%;
+}.h-\[11px\] {
+	height: 11px;
 }.h-10 {
 	height: 2.5rem;
 }.h-5 {
 	height: 1.25rem;
-}.h-full {
-	height: 100%;
-}.h-3 {
-	height: 0.75rem;
-}.h-screen {
-	height: 100vh;
-}.h-\[11px\] {
-	height: 11px;
 }.h-3\.5 {
 	height: 0.875rem;
+}.h-3 {
+	height: 0.75rem;
+}.h-4 {
+	height: 1rem;
 }.h-6 {
 	height: 1.5rem;
-}.w-4 {
-	width: 1rem;
+}.min-h-full {
+	min-height: 100%;
 }.w-full {
 	width: 100%;
-}.w-5 {
-	width: 1.25rem;
-}.w-3 {
-	width: 0.75rem;
-}.w-10 {
-	width: 2.5rem;
 }.w-screen {
 	width: 100vw;
 }.w-\[9px\] {
 	width: 9px;
+}.w-5 {
+	width: 1.25rem;
 }.w-3\.5 {
 	width: 0.875rem;
-}.w-11 {
-	width: 2.75rem;
+}.w-3 {
+	width: 0.75rem;
 }.w-\[200px\] {
 	width: 200px;
+}.w-4 {
+	width: 1rem;
+}.w-11 {
+	width: 2.75rem;
 }.max-w-xs {
 	max-width: 20rem;
 }.max-w-\[800px\] {
@@ -1042,12 +1105,12 @@ video {
 	transform: var(--tw-transform);
 }.cursor-\[row-resize\] {
 	cursor: row-resize;
-}.cursor-\[col-resize\] {
-	cursor: col-resize;
 }.cursor-auto {
 	cursor: auto;
 }.cursor-pointer {
 	cursor: pointer;
+}.cursor-\[col-resize\] {
+	cursor: col-resize;
 }.select-none {
 	user-select: none;
 }.flex-col {
@@ -1066,14 +1129,20 @@ video {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(0.75rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}.space-x-8 > :not([hidden]) ~ :not([hidden]) {
+}.space-x-6 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
-	margin-right: calc(2rem * var(--tw-space-x-reverse));
-	margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+	margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }.divide-y > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-y-reverse: 0;
 	border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
 	border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}.divide-dashed > :not([hidden]) ~ :not([hidden]) {
+	border-style: dashed;
 }.divide-gray-300 > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-divide-opacity));
@@ -1081,6 +1150,8 @@ video {
 	overflow: auto;
 }.overflow-hidden {
 	overflow: hidden;
+}.overflow-y-auto {
+	overflow-y: auto;
 }.truncate {
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -1089,35 +1160,28 @@ video {
 	white-space: nowrap;
 }.rounded-full {
 	border-radius: 9999px;
-}.rounded-b {
-	border-bottom-right-radius: 0.25rem;
-	border-bottom-left-radius: 0.25rem;
 }.rounded-bl-md {
 	border-bottom-left-radius: 0.375rem;
 }.border-0 {
 	border-width: 0px;
 }.border-2 {
 	border-width: 2px;
-}.border {
-	border-width: 1px;
-}.border-b {
-	border-bottom-width: 1px;
-}.border-l {
-	border-left-width: 1px;
 }.border-t {
 	border-top-width: 1px;
-}.border-r {
-	border-right-width: 1px;
+}.border-b {
+	border-bottom-width: 1px;
 }.border-b-2 {
 	border-bottom-width: 2px;
-}.border-t-0 {
-	border-top-width: 0px;
-}.border-gray-200 {
-	--tw-border-opacity: 1;
-	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}.border-r {
+	border-right-width: 1px;
+}.border-l {
+	border-left-width: 1px;
 }.border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}.border-gray-200 {
+	--tw-border-opacity: 1;
+	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }.border-indigo-400 {
 	--tw-border-opacity: 1;
 	border-color: rgba(129, 140, 248, var(--tw-border-opacity));
@@ -1126,11 +1190,11 @@ video {
 }.bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-}.bg-transparent {
-	background-color: transparent;
 }.bg-gray-50 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}.bg-transparent {
+	background-color: transparent;
 }.bg-gray-100 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
@@ -1143,93 +1207,93 @@ video {
 }.bg-gray-300 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}.p-4 {
+	padding: 1rem;
 }.p-1\.5 {
 	padding: 0.375rem;
 }.p-1 {
 	padding: 0.25rem;
-}.p-4 {
-	padding: 1rem;
-}.py-2 {
-	padding-top: 0.5rem;
-	padding-bottom: 0.5rem;
 }.px-4 {
 	padding-left: 1rem;
 	padding-right: 1rem;
+}.py-2 {
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 }.px-1 {
 	padding-left: 0.25rem;
 	padding-right: 0.25rem;
 }.py-\[5px\] {
 	padding-top: 5px;
 	padding-bottom: 5px;
-}.py-1 {
-	padding-top: 0.25rem;
-	padding-bottom: 0.25rem;
-}.px-2 {
-	padding-left: 0.5rem;
-	padding-right: 0.5rem;
-}.py-0 {
-	padding-top: 0px;
-	padding-bottom: 0px;
 }.py-3 {
 	padding-top: 0.75rem;
 	padding-bottom: 0.75rem;
 }.pr-3 {
 	padding-right: 0.75rem;
-}.pt-10 {
-	padding-top: 2.5rem;
-}.pb-8 {
-	padding-bottom: 2rem;
-}.text-left {
-	text-align: left;
+}.pt-3 {
+	padding-top: 0.75rem;
+}.pb-6 {
+	padding-bottom: 1.5rem;
 }.text-center {
 	text-align: center;
-}.font-sans {
-	font-family: "Nunito Sans", -apple-system, ".SFNSText-Regular", "San Francisco", BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }.font-monospace {
 	font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+}.font-sans {
+	font-family: "Nunito Sans", -apple-system, ".SFNSText-Regular", "San Francisco", BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}.text-base {
+	font-size: 1rem;
+	line-height: 1.5rem;
 }.text-sm {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
 }.text-xs {
 	font-size: 0.75rem;
 	line-height: 1rem;
-}.text-base {
-	font-size: 1rem;
-	line-height: 1.5rem;
 }.text-\[11px\] {
 	font-size: 11px;
 }.font-bold {
 	font-weight: 700;
-}.text-gray-400 {
-	--tw-text-opacity: 1;
-	color: rgba(156, 163, 175, var(--tw-text-opacity));
-}.text-gray-500 {
-	--tw-text-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-text-opacity));
+}.uppercase {
+	text-transform: uppercase;
+}.italic {
+	font-style: italic;
+}.leading-none {
+	line-height: 1;
+}.tracking-wide {
+	letter-spacing: 0.025em;
 }.text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}.text-gray-400 {
+	--tw-text-opacity: 1;
+	color: rgba(156, 163, 175, var(--tw-text-opacity));
 }.text-red-300 {
 	--tw-text-opacity: 1;
 	color: rgba(252, 165, 165, var(--tw-text-opacity));
 }.text-gray-700 {
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
-}.text-gray-800 {
+}.text-gray-500 {
 	--tw-text-opacity: 1;
-	color: rgba(31, 41, 55, var(--tw-text-opacity));
-}.text-gray-600 {
-	--tw-text-opacity: 1;
-	color: rgba(75, 85, 99, var(--tw-text-opacity));
+	color: rgba(107, 114, 128, var(--tw-text-opacity));
 }.\!text-gray-300 {
 	--tw-text-opacity: 1 !important;
 	color: rgba(209, 213, 219, var(--tw-text-opacity)) !important;
-}.text-gray-900 {
+}.text-gray-800 {
 	--tw-text-opacity: 1;
-	color: rgba(17, 24, 39, var(--tw-text-opacity));
+	color: rgba(31, 41, 55, var(--tw-text-opacity));
+}.\!text-green-600 {
+	--tw-text-opacity: 1 !important;
+	color: rgba(5, 150, 105, var(--tw-text-opacity)) !important;
 }.text-indigo-500 {
 	--tw-text-opacity: 1;
 	color: rgba(99, 102, 241, var(--tw-text-opacity));
+}.text-gray-900 {
+	--tw-text-opacity: 1;
+	color: rgba(17, 24, 39, var(--tw-text-opacity));
+}.text-gray-600 {
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
 }.underline {
 	text-decoration: underline;
 }.antialiased {
@@ -1266,9 +1330,7 @@ video {
 	transition-duration: 200ms;
 }.ease-in-out {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}.min-h-fill {
-    min-height: fill-available;
-  }.form-input {
+}.form-input {
 	width: 100%;
 	border-radius: 0.125rem;
 	--tw-border-opacity: 1;
@@ -1460,15 +1522,18 @@ video {
 	--tw-bg-opacity: 0.2;
 }.hover\:bg-opacity-50:hover {
 	--tw-bg-opacity: 0.5;
-}.hover\:text-indigo-500:hover {
-	--tw-text-opacity: 1;
-	color: rgba(99, 102, 241, var(--tw-text-opacity));
 }.hover\:text-indigo-800:hover {
 	--tw-text-opacity: 1;
 	color: rgba(55, 48, 163, var(--tw-text-opacity));
 }.hover\:text-gray-700:hover {
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
+}.hover\:text-indigo-500:hover {
+	--tw-text-opacity: 1;
+	color: rgba(99, 102, 241, var(--tw-text-opacity));
+}.hover\:text-green-600:hover {
+	--tw-text-opacity: 1;
+	color: rgba(5, 150, 105, var(--tw-text-opacity));
 }.focus\:outline-none:focus {
 	outline: 2px solid transparent;
 	outline-offset: 2px;
@@ -1515,8 +1580,10 @@ video {
 		min-height: 0px;
 	}
 
-	.md\:border-l {
-		border-left-width: 1px;
+	.md\:divide-x > :not([hidden]) ~ :not([hidden]) {
+		--tw-divide-x-reverse: 0;
+		border-right-width: calc(1px * var(--tw-divide-x-reverse));
+		border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
 	}
 
 	.md\:pl-3 {
@@ -1525,6 +1592,13 @@ video {
 
 	.md\:pr-4 {
 		padding-right: 1rem;
+	}
+}@media (min-width: 1024px) {
+
+	.lg\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-x-reverse: 0;
+		margin-right: calc(2rem * var(--tw-space-x-reverse));
+		margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 	}
 }
 
