--- a/app/views/lookbook/components/_param.html.erb
+++ b/app/views/lookbook/components/_param.html.erb
@@ -1,10 +1,10 @@
 <div
   class="px-4 py-3"
   x-data="param"
-  <% if i == 0 %>x-effect="if ($store.inspector.panels.active === 'params') setFocus()"<% end %>
+  <% if i == 0 %>x-effect="if ($store.inspector.drawer.active === 'params') setFocus()"<% end %>
 >
   <div class="flex items-start max-w-[800px]">
-    <div class="w-[200px] flex-none py-2">
+    <div class="flex-none py-2" :style="`width: ${($store.layout.desktop && horizontal) ? '200' : '120' }px`">
       <label for="param-<%= param[:name] %>" class="font-bold">
         <%= param[:name].titleize %>
       </label>
