--- a/app/views/lookbook/panels/_output.html.erb
+++ b/app/views/lookbook/panels/_output.html.erb
@@ -1,4 +1,4 @@
-<div class="p-4 flex-grow min-h-full">
+<div class="p-4 h-full bg-gray-50 overflow-auto">
   <%= component "code" do -%>
     <% if examples.many? %>
       <% examples.each do |example| -%>
