--- a/app/views/lookbook/panels/_source.html.erb
+++ b/app/views/lookbook/panels/_source.html.erb
@@ -1,4 +1,4 @@
-<div class="p-4 h-full overflow-auto bg-gray-50 space-y-6">
+<div class="p-4 h-full overflow-auto bg-gray-50 space-y-6" data-morph-strategy="replace">
   <% if examples.many? %>
     <% examples.each do |example| %>
       <%= component "code", language: example[:source_lang][:name] do -%>
