--- a/app/views/lookbook/inputs/_select.html.erb
+++ b/app/views/lookbook/inputs/_select.html.erb
@@ -2,7 +2,7 @@
   name="<%= name %>"
   id="<%= id %>"
   class="form-input"
-  @change.stop="update($el.name, $el.value)"
+  x-model="value"
   x-ref="input">
   <%= options_for_select(options, value) %>
 </select>
