--- a/app/views/lookbook/inputs/_textarea.html.erb
+++ b/app/views/lookbook/inputs/_textarea.html.erb
@@ -3,6 +3,7 @@
   class="form-input"
   name="<%= name %>"
   rows="4"
-  @keyup.stop.debounce.300="update($el.name, $el.value)"
+  @keyup.stop
+  x-model="value"
   x-ref="input"
 ><%= value %></textarea>
