--- a/public/lookbook-assets/css/app.css
+++ b/public/lookbook-assets/css/app.css
@@ -911,7 +911,10 @@ video {
 	margin-top: 0;
 }.prose-sm > :last-child {
 	margin-bottom: 0;
-}#nav > ul > li {
+}#nav > ul > li > div {
+	border-bottom-width: 1px;
+	--tw-border-opacity: 1;
+	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 	padding-top: 0.25rem;
 	padding-bottom: 0.25rem;
 }.nav-toggle {
